Closed Bug 1697886 Opened 3 years ago Closed 3 years ago

PresShell::GetPrimaryContentDocument shouldn't trigger about:blank creation.

Categories

(Core :: DOM: Navigation, defect)

defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox88 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

After bug 1209947 ./mach run --disable-e10s trivially triggers the assertion added there.

It's called during painting, so that'd be bad. This trivially happens
with e10s disabled.

This is the same as bug 1697701, I think

Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/91b2bb51b98b
PresShell::GetPrimaryContentDocument shouldn't trigger about:blank creation. r=smaug
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: