Bug 1697886 - PresShell::GetPrimaryContentDocument shouldn't trigger about:blank creation. r=smaug

It's called during painting, so that'd be bad. This trivially happens
with e10s disabled.

Differential Revision: https://phabricator.services.mozilla.com/D108077